--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,37 @@
 {% extends "layout2.html" %}
 
 {%block container %}
-<h1>Flask UTL</h1>
+{%from"_macros.html" import camposNuevos%}
+<div class="container">
+    <div class="row">
+    <form name="sent" action="/index" id="contactFrom" method="POST">
+        <div class=" row control-group">
+            <div class="from-group col-xs-12 float-lebel-from-group">
+                {{camposNuevos(from.nombre, class='form-control')}}
+            </div>
+        </div>
+        <div class=" row control-group">
+            <div class="from-group col-xs-12 float-lebel-from-group">
+                {{camposNuevos(from.primerApellido, class='form-control')}}
+            </div>
+        </div>
+      
+
+        <div class=" row control-group">
+            <div class="from-group col-xs-12 float-lebel-from-group">
+                {{camposNuevos(from.segundoApellido, class='form-control')}}
+            </div>
+        </div>
+
+        <div class=" row control-group">
+            <div class="from-group col-xs-12 float-lebel-from-group">
+                {{camposNuevos(from.correo, class='form-control')}}
+            </div>
+        </div>
+        <input type="hidden" name="csrf_token" value="{{csrf_token()}}">
+        <input type="submit" name="signup" value="Registrar" id="send-sigup">
+    </form>
+    </div>
+</div>
 {%endblock%}
           
