--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,40 @@
 {% extends "layout2.html" %}
 
-{%block container %}
-{%from"_macros.html" import camposNuevos%}
+{% block container %}
+
+{%from "_macros.html" import camposNuevos%}
 <div class="container">
-    <div class="row">
-    <form name="sent" action="/index" id="contactFrom" method="POST">
-        <div class=" row control-group">
-            <div class="from-group col-xs-12 float-lebel-from-group">
-                {{camposNuevos(from.nombre, class='form-control')}}
-            </div>
-        </div>
-        <div class=" row control-group">
-            <div class="from-group col-xs-12 float-lebel-from-group">
-                {{camposNuevos(from.primerApellido, class='form-control')}}
-            </div>
-        </div>
-      
+    <div clas="row">
 
-        <div class=" row control-group">
-            <div class="from-group col-xs-12 float-lebel-from-group">
-                {{camposNuevos(from.segundoApellido, class='form-control')}}
-            </div>
-        </div>
+        <form name="sent" action="/index" id="contactForm" method="POST">
+            <div class="row control-group">
+                <div class="form-group col-xs-12 float-label-form-group controls">
+                    {{ camposNuevos(form.nombre,class='form-control') }}
 
-        <div class=" row control-group">
-            <div class="from-group col-xs-12 float-lebel-from-group">
-                {{camposNuevos(from.correo, class='form-control')}}
+                </div>
             </div>
-        </div>
-        <input type="hidden" name="csrf_token" value="{{csrf_token()}}">
-        <input type="submit" name="signup" value="Registrar" id="send-sigup">
-    </form>
+            <div class="row control-group">
+                <div class="form-group col-xs-12 float-label-form-group controls">
+                    {{ camposNuevos(form.apaterno,class='form-control') }}
+
+                </div>
+            </div>
+            <div class="row control-group">
+                <div class="form-group col-xs-12 float-label-form-group controls">
+                    {{ camposNuevos(form.email,class='form-control') }}
+
+                </div>
+            </div>
+
+            <input type="hidden" name="csrf_token"
+            value="{{ csrf_token() }}"/>
+
+            <input type="submit" id="send-signup" name="signup"
+            value="Registrar"/>
+            
+        </form>
+
     </div>
 </div>
-{%endblock%}
-          
+{% endblock %}
+
