--- a/templates/ABC_Completo.html
+++ b/templates/ABC_Completo.html
@@ -1,5 +1,5 @@
-{% extends "layout2.html"%}
-{% from "_macros.html" import render_field%}
+{%extends "layout2.html"%}
+{%from "_macros.html" import render_field%}
 {%block container%}
 
 <div class="container">
@@ -24,8 +24,8 @@
                     <td>{{alum.nombre}}</td>
                     <td>{{alum.apaterno}}</td>
                     <td>{{alum.email}}</td>
-                    <td><a href="eliminar.html?id={{alum.id}}" class="btn btn-danger">Eliminar</a></td>
-                    <td><a href="modificar.html?id={{alum.id}}" class="btn btn-warning">Modificar</a></td>
+                    <td><a href="eliminar?id={{alum.id}}" class="btn btn-danger">Eliminar</a></td>
+                    <td><a href="modificar?id={{alum.id}}" class="btn btn-warning">Modificar</a></td>
                 </tr>
                 {%endfor%}
             </tbody>
